--- a/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Immunization Schedule.html
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'immunization_schedule' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a href="{% url 'immunization_schedule' %}" class="nav-link" style="color:rgb(27, 177, 92) !important;" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="Immunization Schedule" >
                             <i class="fa fa-fw fa-calendar-alt" style="font-size: 24px;"></i>
                             </a>
