--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -17,41 +17,10 @@
                 <div id="navLinks">
                     <ul class="nav text-small">
                         <li>
-                            <a href="{% url 'bhw_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
-                            title="Barangay Health Worker Home">
-                            <i class="fa fa-fw fa-home" style="font-size: 24px;"></i>   
+                            <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                            title="Go back to Preschooler Dashboard">
+                            <i class="fa fa-lg fa-fw fa-chevron-circle-left" style="font-size: 24px;"></i>    
                             </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'preschooler_dashboard' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Preschooler Profile">
-                            <i class="fa fa-fw fa-id-card " style="font-size: 24px;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{% url 'immunization_schedule' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="Immunization Schedule" >
-                            <i class="fa fa-fw fa-calendar-alt" style="font-size: 24px;"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a class="btn nav-link" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="User Settings" aria-expanded="false">
-                                <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
-                                
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
-                                <div id="dropdown-menu">
-                                    <div>
-                                        <i class="fa fa-lg fa-fw fa-user bi mx-auto"></i>   
-                                        <span style="font-size: 15px;"> Barangay Health Worker </span>
-                                    </div>
-                                    <div>
-                                        <li><hr class="dropdown-divider"></li>
-                                        <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
-                                    </div>
-                                </div>
-                            </ul>                    
                         </li>
                     </ul>
                 </div>
@@ -60,6 +29,15 @@
     </nav>
     </div>
 </header>
+<!-- Tooltip Script -->
+<script>
+    $(function () {
+       $('[data-toggle="tooltip"]').tooltip({'delay': { show: 400, hide: 100 }})})
+       $('[data-toggle="tooltip"]').on('shown.bs.tooltip', function () {
+       $('.tooltip').addClass('animated fade');
+    })
+    </script>
+    
 
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="margin-top: 60px;">
