suffix name preschooler

--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -11,7 +11,7 @@
     <script src="{% static '/Javascript/js/datatables.min.js' %}"></script>
     <script src="{% static '/Javascript/js/datatables.js' %}"></script>
 
-\    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static '/CSS/styles.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/font-awesome/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static '/CSS/css/bootstrap.min.css' %}">
     <script src="{% static '/Javascript/js/jquery.min.js' %}"></script>
@@ -106,7 +106,7 @@
                     <div class="card text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
-                            <h5 class="fa fa-home"> San Mateo</h5>
+                            <h5 class="fa fa-home"> {{ bhw.bhw_barangay }}</h5>
                         </div>
                     </div>
                     <br>
