--- a/ppms_project/profilingApp/templates/activities/Parent Home.html
+++ b/ppms_project/profilingApp/templates/activities/Parent Home.html
@@ -154,7 +154,7 @@
                             <tr>
                                 <td></td>
                                 <td>{{ preschooler.first_name }}</td>
-                                <td>{{ preschooler.middle_name }}</td>
+                                <td>{{ preschooler.bmi_tag }}</td>
                                 <td>{{ preschooler.last_name }}</td>
                                 {% if preschooler.suffix_name is None %}
                                     <td>N/A</td>
