--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -49,6 +49,15 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
+                                        <p class="mb-0">Age</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">{{ preschooler.age_months }} Months</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
                                         <p class="mb-0">Gender</p>
                                     </div>
                                     <div class="col-sm">
@@ -80,71 +89,79 @@
                         <i class="fas fa-square" style="color: rgb(0, 165, 79);"> -Normal</i>
                         <i class="fas fa-square" style="color: rgb(255, 241, 2);"> -Wasted</i>
                         <i class="fas fa-square" style="color: rgb(238, 29, 35);"> -Severly Wasted</i>
-                        <i class="fas fa-square" style="color: rgb(242, 98, 33);"> -Overweight</i>
-                        <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i>
+                        <i class="fas fa-square" style="color: rgb(242, 98, 33);"> -Overweight/Obese</i>
+                        <!-- <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i> -->
                         <hr>
                         <div class="card-group">
                             <div class="card">
                                 <div class="card-header">
                                     <h6 class="card-title">WFA Status</h6>
                                 </div>
-                                <div class="card-body">
-                                    <p class="card-text">{{ preschooler.wfa }}</p>
-                                </div>
+                                {% if preschooler.wfa > 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.wfa }}</p>
+                                    </div>
+                                {% elif preschooler.wfa >= -2.0 and preschooler.wfa <= 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(0, 165, 79);">{{ preschooler.wfa }}</p>
+                                    </div>
+                                {% elif preschooler.wfa >= -3.0 and preschooler.wfa <= -2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(255, 241, 2);">{{ preschooler.wfa }}</p>
+                                    </div>
+                                {% else %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.wfa }}</p>
+                                    </div>
+                                {% endif %}
                             </div>
                             <div class="card">
                                 <div class="card-header">
                                     <h6 class="card-title">HFA Status</h6>
                                 </div>
-                                <div class="card-body">
-                                    <p class="card-text">{{ preschooler.hfa }}</p>
-                                </div>
+                                
+                                {% if preschooler.hfa > 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.hfa }}</p>
+                                    </div>
+                                {% elif preschooler.hfa >= -2.0 and preschooler.hfa <= 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(0, 165, 79);">{{ preschooler.hfa }}</p>
+                                    </div>
+                                {% elif preschooler.hfa >= -3.0 and preschooler.hfa <= -2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(255, 241, 2);">{{ preschooler.hfa }}</p>
+                                    </div>
+                                {% else %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.hfa }}</p>
+                                    </div>
+                                {% endif %}
                             </div>
                             <div class="card">
                                 <div class="card-header">
                                     <h6 class="card-title">WHFA Status</h6>
                                 </div>
-                                <div class="card-body">
-                                    <p class="card-text">{{ preschooler.whfa }}</p>
+                                {% if preschooler.whfa > 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.whfa }}</p>
+                                    </div>
+                                {% elif preschooler.whfa >= -2.0 and preschooler.whfa <= 2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(0, 165, 79);">{{ preschooler.whfa }}</p>
+                                    </div>
+                                {% elif preschooler.whfa >= -3.0 and preschooler.whfa <= -2.0 %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(255, 241, 2);">{{ preschooler.whfa }}</p>
+                                    </div>
+                                {% else %}
+                                    <div class="card-body">
+                                        <p class="card-text" style="color: rgb(242, 98, 33);">{{ preschooler.whfa }}</p>
+                                    </div>
+                                {% endif %}
                                 </div>
                             </div>
                         </div>
-                            <div class="modal fade" id="update" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-header text-center">
-                                            <h5 class="modal-title fa fa-user-edit" id="exampleModalLabel"> Preschooler Update</h5>
-                                            
-                                        </div>
-                                        <div class="modal-body mx-4">
-                                            <form method="POST">
-                                            <!-- <form method="POST" onsubmit="get_cred($('#type').val());"> -->
-                                                <!-- {% csrf_token %} -->
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Applicant: </label>
-                                                    <!-- {{ form.examiner }} -->
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Date:</label>
-                                                    <!-- {{ form.exam_date }} -->
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Exam Time:</label>
-                                                    <!-- {{ form.exam_time }} -->
-                                                </div>
-                                                <div class="md-form">
-                                                    <label id="user-lbl" data-error="wrong" data-success="right">Room Assignment:</label>
-                                                    <!-- {{ form.room }} -->
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <button type="submit" class="btn " style="background-color: #188045; color: white;">Add</button>
-                                                    <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
