--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -95,13 +95,13 @@
                     <div class="card text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
-                            <button class="btn dropdown-toggle" type="button"  data-bs-toggle="dropdown"><i class="fa fa-home" aria-hidden="true"></i>All</button>
-                            <ul class="dropdown-menu" id="dropdown-menu">
-                                <li><a class="dropdown-item" href="">San andress</a></li>
-                                <li><a class="dropdown-item" href="">San Nicolas</a></li>
-                                <li><a class="dropdown-item" href="">Salitran</a></li>
-                                <li><a class="dropdown-item" href="">San Mateo</a></li>
-                            </ul>
+                            <select class="form-select " aria-label="Default select example" >
+                                <option selected>All</option>
+                                <option value="1">San andress</option>
+                                <option value="2">San Nicolas</option>
+                                <option value="3">Salitran</option>
+                                <option value="4">San Mateo</option>
+                            </select>
                         </div>
                     </div>
                     <br>
