--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -101,7 +101,13 @@
                                 <td>{{ preschooler.first_name }}</td>
                                 <td>{{ preschooler.middle_name }}</td>
                                 <td>{{ preschooler.last_name }}</td>
-                                <td>{{ preschooler.suffix_name }}</td>
+                                {% if preschooler.suffix_name is None %}
+                                    <td>N/A</td>
+                                {% elif preschooler.suffix_name == '' %}
+                                    <td>N/A</td>
+                                {% else %}
+                                    <td>{{ preschooler.suffix_name }}</td>
+                                {% endif %}
                                 <td>{{ preschooler.birthday }}</td>
                                 <td>{{ preschooler.age_months }}</td>
                                 <td>{{ preschooler.whfa }}</td>
