--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -32,7 +32,7 @@
                 <div>
                     <a href="#" class="name" style="text-decoration: none;">
                         <img class="navbar-icon" src="{% static '/Media/avatar.png' %}" alt="dasma-logo">
-                        <span id="hidetitle" class="brand__name" style="color:rgb(3, 3, 3); margin-left:10px;">City of Dasmariñas</span>
+                        <span id="hidetitle" class="brand__name" style="color:rgb(0, 0, 0); margin-left:10px;">City of Dasmariñas</span>
                     </a>
                 </div>
                 <div id="navLinks">
@@ -56,7 +56,6 @@
                                 <i class="fa fa-fw fa-user-nurse" style="font-size: 24px;"></i>
                                 <span class="position-absolute top-25 start-75 translate-middle badge rounded-pill bg-danger">
                                     {{ invalidated_count }}
-                                    <span class="visually-hidden">unread messages</span>
                                 </span></a>
                             {% else %}
                                 <a href="{% url 'bhw_validation' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
@@ -66,9 +65,12 @@
                             {% endif %}
                         </li>
                         <li>
-                            <a class="btn nav-link" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
+                            <a class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
                             title="User Settings" aria-expanded="false">
-                                <i class="fa fa-fw fa-user-cog bi dropdown-toggle" style="font-size: 24px;"></i>
+                                <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
+                                <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
+                                    <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
+                                </span></a>
                                 
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
@@ -157,7 +159,7 @@
                                 </div>
                                 <div class="card-body p-3 ">
                                     <div class="table-responsive">
-                                        <table class="table table-hover table-cell-border" id="user_list">
+                                        <table class="table table-hover" style="border:none " id="user_list">
                                             <thead>
                                                 <tr>
                                                     <th scope="col" class="text-center">No.</th>
