--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -113,7 +113,7 @@
                 <div class="col">
                 <div class="card shadow-sm bg-white rounded">
                         <div class="card-header">
-                            <h5 class="card-title">Normal</h5>
+                            <h6 class="card-title">Normal</h6>
                         </div>
                         <div class="card-body">
                             <p class="card-text">0</p>
@@ -123,7 +123,7 @@
                 <div class="col">
                     <div class="card shadow-sm bg-white rounded">
                         <div class="card-header">
-                            <h5 class="card-title">Wasted</h5>
+                            <h6 class="card-title">Wasted</h6>
                         </div>
                         <div class="card-body">
                             <p class="card-text">0</p>
@@ -133,7 +133,7 @@
                 <div class="col">
                     <div class="card shadow-sm bg-white rounded">
                         <div class="card-header">
-                            <h5 class="card-title">Severly Wasted</h5>
+                            <h6 class="card-title">Severly Wasted</h6>
                         </div>
                         <div class="card-body">
                             <p class="card-text">0</p>
@@ -143,7 +143,7 @@
                 <div class="col">
                     <div class="card shadow-sm bg-white rounded">
                         <div class="card-header">
-                            <h5 class="card-title">Overweight</h5>
+                            <h6 class="card-title">Overweight</h6>
                         </div>
                         <div class="card-body">
                             <p class="card-text">0</p>
@@ -153,7 +153,7 @@
                 <div class="col">
                     <div class="card shadow-sm bg-white rounded">
                         <div class="card-header">
-                            <h5 class="card-title">Obese</h5>
+                            <h6 class="card-title">Obese</h6>
                         </div>
                         <div class="card-body">
                             <p class="card-text">0</p>
@@ -163,8 +163,10 @@
         </div>
             <br>
             <div>
-                <div class="card shadow-sm bg-white rounded">
+                <div class="card-header">
                     <h5>Record</h5>
+                </div>
+                <div class="card shadow-sm bg-white rounded">
 
                     <div class="card-body p-3 ">
                         <canvas id="myBar" width="100%" height="50"></canvas>
