--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -85,7 +85,7 @@
         <div class="">
             <div class="row"> 
                 <div class="col">
-                    <h3 style="text-align:left;">Validate New Barangay Health Workers</h3>
+                    <h3 style="text-align:left;">Validate</h3>
                 </div>
             </div>
         <hr>
@@ -96,6 +96,10 @@
     <div class="text-black">
         <div class="row">
             <div class="col">
+                <div class="card-header">
+                    <h3> Barangay Health Workers</h3>
+
+                </div>
                 <div class="card shadow-sm p-3 bg-white rounded">
                     <div class="table-responsive">
                         <table class="table table-hover table-cell-border" id="table_validation">
