--- a/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Preschooler Dashboard.html
@@ -63,20 +63,14 @@
 <!-- Dashboard -->
 <div id="grid" class="container-fluid" style="margin-top: 60px;">
     <div class="container-grid">
-        <div class="">
-            <div class="row"> 
-                <div class="col">
-                    <h3 style="text-align:left;">Preschooler's Nutritional Status</h3>
-                </div>
-            </div>
-        <hr>
-        <br>
-        </div>
     </div>
 <!-- DataTables -->
 <div class="container text-black">
     <div class="row">
         <div class="col">
+            <div class="card-header">
+                <h3>Preschooler's Nutritional Status</h3>
+            </div>
             <div class="card shadow-lg p-3 bg-white rounded">
 
                 <div class="table-responsive">
