--- a/ppms_project/profilingApp/templates/activities/Admin Home2.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home2.html
@@ -116,7 +116,7 @@
                             <h6 class="card-title">Normal</h6>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">0</p>
+                            <p class="card-text">{{ normal }}</p>
                         </div>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                             <h6 class="card-title">Wasted</h6>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">0</p>
+                            <p class="card-text">{{ wasted }}</p>
                         </div>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                             <h6 class="card-title">Severly Wasted</h6>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">0</p>
+                            <p class="card-text">{{ severly }}</p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                             <h6 class="card-title">Overweight</h6>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">0</p>
+                            <p class="card-text">{{ overobese }}</p>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             <h6 class="card-title">Obese</h6>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">0</p>
+                            <p class="card-text">{{ overobese }}</p>
                         </div>
                     </div>
                 </div>
@@ -188,6 +188,7 @@
     
 
     // Pie Chart Example
+    var data_count = JSON.parse('{{ count_data|escapejs }}')
     var ctx = document.getElementById("myBar");
     var myBar = new Chart(ctx, {
     type: 'bar',
@@ -200,7 +201,7 @@
         labels: ["Normal", "Wasted", "Severly Wasted","Overweight","Obese"],
         datasets: [{
                 label: 'Normal',
-                data: [65, 59, 80, 81, 56, 55, 40],
+                data: data_count,
                 backgroundColor: [
                 'rgb(0, 165, 79)',
                 'rgb(255, 241, 2)',
